Validación completa de los epw de la RUOA y ESOLMET

--- a/notebooks/004c_CSforEPWfile.ipynb
+++ b/notebooks/004c_CSforEPWfile.ipynb
@@ -53,7 +53,7 @@
        "      <th>To</th>\n",
        "      <th>HR</th>\n",
        "      <th>Wspeed</th>\n",
-       "      <th>Presion</th>\n",
+       "      <th>P</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,7 +70,7 @@
        "      <td>23.02</td>\n",
        "      <td>47.67</td>\n",
        "      <td>3.463</td>\n",
-       "      <td>876.0016</td>\n",
+       "      <td>87600.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -85,7 +85,7 @@
        "      <td>22.95</td>\n",
        "      <td>48.15</td>\n",
        "      <td>2.541</td>\n",
-       "      <td>875.9597</td>\n",
+       "      <td>87595.97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -100,7 +100,7 @@
        "      <td>23.01</td>\n",
        "      <td>47.78</td>\n",
        "      <td>1.763</td>\n",
-       "      <td>875.8949</td>\n",
+       "      <td>87589.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -115,7 +115,7 @@
        "      <td>22.83</td>\n",
        "      <td>47.67</td>\n",
        "      <td>2.161</td>\n",
-       "      <td>875.8536</td>\n",
+       "      <td>87585.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -130,7 +130,7 @@
        "      <td>22.69</td>\n",
        "      <td>48.32</td>\n",
        "      <td>1.409</td>\n",
-       "      <td>875.6332</td>\n",
+       "      <td>87563.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -160,7 +160,7 @@
        "      <td>23.52</td>\n",
        "      <td>76.54</td>\n",
        "      <td>0.467</td>\n",
-       "      <td>877.1298</td>\n",
+       "      <td>87712.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7629</th>\n",
@@ -175,7 +175,7 @@
        "      <td>23.54</td>\n",
        "      <td>77.08</td>\n",
        "      <td>0.427</td>\n",
-       "      <td>877.1132</td>\n",
+       "      <td>87711.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7630</th>\n",
@@ -190,7 +190,7 @@
        "      <td>23.39</td>\n",
        "      <td>79.91</td>\n",
        "      <td>0.578</td>\n",
-       "      <td>877.0811</td>\n",
+       "      <td>87708.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7631</th>\n",
@@ -205,7 +205,7 @@
        "      <td>23.16</td>\n",
        "      <td>80.50</td>\n",
        "      <td>2.258</td>\n",
-       "      <td>877.1050</td>\n",
+       "      <td>87710.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7632</th>\n",
@@ -220,7 +220,7 @@
        "      <td>22.48</td>\n",
        "      <td>84.40</td>\n",
        "      <td>2.867</td>\n",
-       "      <td>876.8762</td>\n",
+       "      <td>87687.62</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -241,18 +241,18 @@
        "7631  2019      6   24    23      50     0.155    0.000      0.0  23.16   \n",
        "7632  2019      6   25     0       0     0.012    0.184      0.0  22.48   \n",
        "\n",
-       "         HR  Wspeed   Presion  \n",
-       "0     47.67   3.463  876.0016  \n",
-       "1     48.15   2.541  875.9597  \n",
-       "2     47.78   1.763  875.8949  \n",
-       "3     47.67   2.161  875.8536  \n",
-       "4     48.32   1.409  875.6332  \n",
+       "         HR  Wspeed         P  \n",
+       "0     47.67   3.463  87600.16  \n",
+       "1     48.15   2.541  87595.97  \n",
+       "2     47.78   1.763  87589.49  \n",
+       "3     47.67   2.161  87585.36  \n",
+       "4     48.32   1.409  87563.32  \n",
        "...     ...     ...       ...  \n",
-       "7628  76.54   0.467  877.1298  \n",
-       "7629  77.08   0.427  877.1132  \n",
-       "7630  79.91   0.578  877.0811  \n",
-       "7631  80.50   2.258  877.1050  \n",
-       "7632  84.40   2.867  876.8762  \n",
+       "7628  76.54   0.467  87712.98  \n",
+       "7629  77.08   0.427  87711.32  \n",
+       "7630  79.91   0.578  87708.11  \n",
+       "7631  80.50   2.258  87710.50  \n",
+       "7632  84.40   2.867  87687.62  \n",
        "\n",
        "[7633 rows x 12 columns]"
       ]
@@ -264,7 +264,7 @@
    ],
    "source": [
     "# Leo archivo de datos limpios\n",
-    "data = pd.read_csv('../data/splitdata.csv')\n",
+    "data = pd.read_csv('../002_datos/splitdata.csv')\n",
     "data.drop('tiempo',axis='columns',inplace=True)\n",
     "data.drop('UV',axis='columns',inplace=True)\n",
     "data"
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('../data/dataforepw.csv',index=False,header=False)"
+    "data.to_csv('../epw/TemixcoEsolmet2018.csv',index=False,header=False)"
    ]
   },
   {
