Manejo de datos simulados y medidos con un poco de problemas en scatter

--- a/notebooks/002_importing_data.ipynb
+++ b/notebooks/002_importing_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "[32776 rows x 1 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2000fb5a2b0>"
+       "<matplotlib.collections.PathCollection at 0x26185bb0e80>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -260,13 +260,13 @@
        "[52560 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eplus = pd.read_csv('../idf/horario_02.csv',names=['tiempo','equipo','Ti_s'],skiprows=1)\n",
+    "eplus = pd.read_csv('../idf/horario_02/horario_02.csv',names=['tiempo','equipo','Ti_s'],skiprows=1)\n",
     "eplus.tiempo = eplus.tiempo.str.replace('24:00:00','23:59:59')\n",
     "eplus.tiempo = '2019 ' + eplus.tiempo\n",
     "eplus.tiempo = pd.to_datetime(eplus.tiempo,format='%Y %m/%d %H:%M:%S')\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "[84419 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
